[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Traps/rain.gd" type="Script" id=1]
[ext_resource path="res://Objects/Traps/thunder2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Images/extra/raindrop.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/rain.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/wind.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Images/extra/leave.png" type="Texture" id=6]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 600, 500, 1 )
flag_align_y = true
flag_disable_z = true
gravity = Vector3( 30, 98, 0 )
angular_velocity = 1.42932e-43
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.6
scale_random = 0.8
color = Color( 0.113725, 0.607843, 0.564706, 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
thunder = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 490, 420 )
amount = 2000
lifetime = 2.0
speed_scale = 2.5
process_material = SubResource( 1 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="rain" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 12.0
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="wind" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 6.876
autoplay = true

[node name="Leave" type="Particles2D" parent="."]
position = Vector2( 490, 100 )
amount = 10
lifetime = 5.0
speed_scale = 2.5
process_material = SubResource( 1 )
texture = ExtResource( 6 )

[node name="Timerwind" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="TimerFewRain" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="finished" from="rain" to="." method="_on_rain_finished"]
[connection signal="finished" from="rain" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timerwind" to="." method="_on_Timerwind_timeout"]
[connection signal="timeout" from="TimerFewRain" to="." method="_on_TimerFewRain_timeout"]
